# YouTube-Trend

./: .env.template  .gitignore  .replit  README.md  ai_generator.py  app.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  scraper.py  vercel.json
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html  results.html
